# Ultralyzer

./: .gitignore  LICENSE  Makefile  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup_env.py
docs/: conf.py  doc_appendix.md  doc_gui_explained.md  doc_installation.md  doc_user_guide.md  index.rst
docs/_build/doctrees/: doc_gui_explain.doctree  doc_gui_explained.doctree  doc_installation.doctree  doc_user_guide.doctree  environment.pickle  index.doctree  user_guide.doctree
docs/_build/html/: .buildinfo  doc_gui_explain.html  doc_gui_explained.html  doc_installation.html  doc_user_guide.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
docs/_build/html/_sources/: doc_gui_explain.md.txt  doc_gui_explained.md.txt  doc_installation.md.txt  doc_user_guide.md.txt  index.rst.txt  user_guide.md.txt
src/ultralyzer/: __init__.py  definitions.py  main.py
src/ultralyzer/.db/: ultralyzer.db
src/ultralyzer/backend/: __init__.py
src/ultralyzer/backend/models/: database.py  models.py  segmentor.py
src/ultralyzer/backend/steps/: base_step.py  metrics.py  s1_quality_control.py  s2_segmentation.py  segmentation.py
src/ultralyzer/backend/utils/: arcades.py  feature_measurement.py  graph.py  preprocessing.py  threads.py
src/ultralyzer/frontend/: __init__.py  main_window.py
src/ultralyzer/frontend/models/: edit_commands.py
src/ultralyzer/frontend/widgets/: canvas.py  widget_base.py  widget_progress.py  widget_s1.py  widget_s2.py  widget_segmentation_thread.py
tests/: test.py
(+1 files in other folders)
